@@ -1,3 +1,8 @@
+Mon Sep 15 15:16:38 2003  George Lebl <jirka@5z.com>
+
+	* cdplayer.c: when started in lockdown mode, hide the preferences
+	  item
+
 2003-08-07  Irene Ryan <irene.ryan@sun.com>
 
 	* docs/C/cdplayer.xml, cdplayer-C.omf: updates to Help for GNOME 2.4 release
